fix: showcase image being squashed

--- a/src/styles/showcase.css
+++ b/src/styles/showcase.css
@@ -28,11 +28,13 @@
   max-width: 100%;
 }
 
-.overlay-div {
+.showcase-overlay {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 28rem;
+  height: auto;
 }
 
 .showcase-description {
@@ -54,7 +56,7 @@
   box-shadow: -10px 15px 0 #30442c;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .showcase-row {
     flex-direction: column;
   }
